hollysite.css
  body {
    background-color: #938299;
    color: #443B47;
    font-family: 'Dancing Script', cursive;
  }
  h1 {
    font-size: 75px;
    text-align: center;
  }
  h2 {
    text-align: center;
  }
  p {
    font-size: 20px;
  }
  a {
    color: #443B47;
  }

  .pict-main {
    height: 200px;
    width: 200px;
    border: 2px solid #443B47;
    border-radius: 200px;
    background: url("images/HollyImage.jpeg") no-repeat center;
    background-size: cover;
    float: center;
    margin: 0 auto;
  }

/*
  .center {
    margin: 30px 0;
  }

  */

  .top-left {
    max-width: 30%;
  }

  .bottom-right {
    margin 30px;
  }

  .top-left p,
  .bottom-right p {
    text-align: center;
    font-size: small;
    text-indent: 0;
  }

  .tl-img {
    height: 200px;
    width: 130px;
    border: 2px solid #443B47;
    background: url("images/NibblerCuteness.png") no-repeat center;
    background-size: cover;
    border-radius: 200px;
    margin: 0 auto;
  }

  .br-img {
    height: 300px;
    width: 400px;
    background: url("images/WaterDroplet.jpg") no-repeat center;
    background-size: cover;
    margin: 0 50px;
    border: 2px solid #443B47;
    border-radius: 150px;
    float: right;
  }

  .center-slideshow img {
    width: 100%;
    border: 2px solid #443B47;
  }

  .center-slideshow{
    position: relative;
    display: block;
    overflow: hidden;
    padding: 0 5px 0 0;
  }
  figure{
    position: absolute;
    opacity: 0;
    transition: 1s opacity;
    margin: 0;
  }
  figcaption{
    position: absolute;
    font-family: 'Dancing Script', cursive;
    font-size: .8em;
    bottom: .75em;
    right: .35em;
    padding: .25em;
    color: #fff;

    background: #000;
    background: rgba(0,0,0, .25);
    border-radius: 2px;
  }
  figcaption a{
    color: #fff;
  }
  figure.show{
    opacity: 1;
    position: static;
    transition: 1s opacity;
  }
  .next, .prev{
    color: #fff;
    position: absolute;
    background: #000;
    background: rgba(0,0,0, .6);
    top: 50%;
    z-index: 1;
    font-size: 2em;
    margin-top: -.75em;
    opacity: .3;
    user-select: none;
  }
  .next:hover, .prev:hover{
    cursor: pointer;
    opacity: 1;
  }
  .next{
    right: 0;
    padding: 10px 5px 15px 10px;
    border-top-left-radius: 3px;
    border-bottom-left-radius: 3px;
  }
  .prev{
    left: 0;
    padding: 10px 10px 15px 5px;
    border-top-right-radius: 3px;
    border-bottom-right-radius: 3px;
  }

  .quotes {
    /*
    max-width: 700px;
    padding: 20px;
    margin: 0 auto;
    */
  }
  .quotes p {
    font-size: smaller;
  }
  .quotes cite {
    font-weight: bold;
    font-size: smaller;
  }

  blockquote{
    max-width: 700px;
    display: block;
    font-size: large;
    text-indent: 0;
    padding: 15px 20px 15px 45px;
    /* margin: 0 0 20px; */
    margin: 0 auto;
    position: relative;

    /*Font*/
    line-height: 1.2;
    text-align: justify;
  }


  blockquote::before{
    content: "\201C"; /*Unicode for Left Double Quote*/

    /*Font*/
    font-size: 30px;
    font-weight: bold;
    color: #443B47;

    /*Positioning*/
    position: absolute;
    left: 10px;
    top:5px;
  }

  blockquote::after{
    /*Reset to make sure*/
    content: "";
  }

  @media (max-width: 500px) {
    h1 {
      font-size: 36px;
    }
    h2 {
      margin: 0 0px;
    }
    p {
      font-size: 15px;
      margin: 0 0px;
    }
    .pict-main {
      height: 100px;
      width: 100px;
    }
    .tl-img {
      height: 100px;
      width: 75px;
      margin-bottom: 10px;
    }
    .br-img {
      height: 100px;
      width: 100px;
      margin: 0 10px;
    }
    blockquote {
      margin-top: 5 px;
    }

    blockquote:before {
        font-size: small;
    }
  }

